fix button mobile css

--- a/style.css
+++ b/style.css
@@ -35,8 +35,7 @@ body {
 }
 
 button {
-  border: none;
-  background: none;
+  all: unset;
   cursor: pointer;
 }
 button:active,
@@ -57,7 +56,7 @@ button:focus {
   position: absolute;
   height: 50%;
   top: 50%;
-  left: 58%;
+  left: 60%;
   font-size: 1.55rem;
   color: white;
   transition: transform 1.5s ease;
